--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.3.0",
+    "gulp-debug": "^3.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-if": "^2.0.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.2",
-    "gulp-pug-inheritance": "^0.2.0"
+    "gulp-pug-inheritance": "^0.2.0",
+    "gulp-util": "^3.0.7"
   }
 }
